--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>2nd Practical</title>
+  <title>1lfe</title>
   <link rel="stylesheet" href="sass/dist/styles.css">
 </head>
 <body>
@@ -20,13 +20,15 @@
   </header>
   <main>
     <section class="jumbo-slider">
-      <div class="jumbo-slider__container">
-
-      </div>
+      <ul class="jumbo-slider__container">
+        <li class="jumbo-slider__slide jumbo-slider__slide--active" attr="1">
+          <div class="jumbo-slider__slide-bg" style="background: url('public/imagejpeg_1.jpg');"></div>
+        </li>
+      </ul>
       <div class="jumbo-slider__nav">
-        <a href="#" class="jumbo-slider__link jumbo-slider__link--active">01 AMG GT</a>
-        <a href="#" class="jumbo-slider__link ">02 Maybach GLS</a>
-        <a href="#" class="jumbo-slider__link">03 AMG G-Wagon</a>
+        <a href="#" class="jumbo-slider__link jumbo-slider__link--active">01 Rear Mount</a>
+        <a href="#" class="jumbo-slider__link ">02 Gas Tank</a>
+        <a href="#" class="jumbo-slider__link">03 Skid Plate</a>
       </div>
       <div class="jumbo-slider__elipsis">
         <div class="jumbo-slider__circle jumbo-slider__circle--filled"></div>
@@ -35,5 +37,6 @@
       </div>
     </section>
   </main>
+  <script src="app.js"></script>
 </body>
 </html>
