info and description

--- a/netlifyIndex.html
+++ b/netlifyIndex.html
@@ -10,7 +10,7 @@
 <body>
   <header class="page-header">
     <div class="page-header__logo">
-      <span>1</span>lfe
+      LOgo
     </div>
     <nav class="page-header__nav">
       <a href="#">Vehicle</a>
@@ -23,22 +23,6 @@
       <ul class="jumbo-slider__container">
         <li class="jumbo-slider__slide jumbo-slider__slide--active" attr="1">
           <div class="jumbo-slider__slide-bg" style="background: url('public/imagejpeg_0.jpg');"></div>
-          <div class="container">
-            <div class="jumbo-slider__info">
-              <div class="jumbo-slider__slide-number">
-                01
-              </div>
-              <div class="jumbo-slider__title jumbo-slider__title--active">
-                Results Driven, Practical Survival, Adventure and Meaningfulness of life
-              </div>
-              <p class="jumbo-slider__description jumbo-slider__description--active">
-                "Not enjoyment, and not sorrow,<br>
-                Is our destined end or way;<br>
-                But to act, that each to-morrow<br>
-                Find us farther than to-day."<br>-- <span>Henry Wadsworth LongFellow</span>
-              </p>
-            </div>
-          </div>
         </li>
       </ul>
       <div class="jumbo-slider__nav">
@@ -52,7 +36,6 @@
         <div class="jumbo-slider__circle"></div>
       </div>
     </section>
-    <div style="height: 200px;"></div>
   </main>
   <script src="app.js"></script>
 </body>
