--- a/odmdev-help/windex.html
+++ b/odmdev-help/windex.html
@@ -47,7 +47,7 @@
                 <div class="header__account">
                 </div>  
             </div>
-            <div class="heavy-metal__tabs">
+<!--             <div class="heavy-metal__tabs">
                 <div class="heavy-metal__tab">
                     <i class="fas fa-home"></i>
                 </div>
@@ -62,7 +62,7 @@
                 <div class="heavy-metal__tab">
                     <i class="fas fa-home"></i>
                 </div>
-            </div>
+            </div> -->
         </header>
     </body>
 </html>
