seo meta tags-1

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta
+  name="description"
+  content="l1fe: Exploration, Practical Knowledge, Adventure"/>
+  <meta
+    property="og:image"
+    content="/public/mission-SEO.png"
+  >
+  <meta name="og:title" content="l1fe">
+  <meta name="twitter:card" content="summary_large_image" />
   <title>1lfe</title>
   <link rel="stylesheet" href="sass/dist/styles.css">
 </head>
